修改markdown公式显示问题，以及修改日期

--- a/config.yml
+++ b/config.yml
@@ -132,7 +132,7 @@ params:
               url: tags
 
     homeInfoParams:
-        Title: "Pan Blog"
+        Title: "Pan'Blog"
         Content: >
             Welcome to pan's blog.
 
